Remove unused CSS file and update HTML to reference correct stylesheet; add comments for clarity in JavaScript

--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
   />
 
   <!-- Main CSS -->
-  <link rel="stylesheet" href="C.css" />
+  <link rel="stylesheet" href="style.cssS" />
 
   <!-- Vue.js (Vue 3 via CDN) -->
   <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
@@ -199,6 +199,7 @@
 
   <!-- Main JS -->
   <script src="Coursework 1.Js"></script>
+  
 </body>
 </html>
 
