Fix incorrect stylesheet reference in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   />
 
   <!-- Main CSS -->
-  <link rel="stylesheet" href="style.cssS" />
+  <link rel="stylesheet" href="style.css" />
 
   <!-- Vue.js (Vue 3 via CDN) -->
   <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
